--- a/app/src/main/res/layout/order_feedback_adapter.xml
+++ b/app/src/main/res/layout/order_feedback_adapter.xml
@@ -92,13 +92,11 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/_2sdp"
-                android:orientation="horizontal"
-                android:weightSum="2">
+                android:orientation="horizontal">
 
                 <LinearLayout
-                    android:layout_width="0dp"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
                     android:orientation="horizontal">
 
                     <com.yberry.dinehawaii.customview.CustomTextView
@@ -121,10 +119,8 @@
                         app:edittextfont="Raleway-Regular.ttf" />
 
                 </LinearLayout>
-
             </LinearLayout>
         </LinearLayout>
-
     </LinearLayout>
 
 </android.support.v7.widget.CardView>
