--- a/app/src/main/res/layout/repeat_order.xml
+++ b/app/src/main/res/layout/repeat_order.xml
@@ -37,19 +37,19 @@
                 android:orientation="vertical">
 
                 <com.yberry.dinehawaii.customview.CustomTextView
+                    style="@style/TextAppearance.AppCompat.Subhead"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Order-Id"
                     android:textStyle="bold"
-                    style="@style/TextAppearance.AppCompat.Subhead"
                     app:edittextfont="Raleway-Bold.ttf" />
 
                 <com.yberry.dinehawaii.customview.CustomTextView
                     android:id="@+id/orderid"
+                    style="@style/TextAppearance.AppCompat.Subhead"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="NA"
-                    style="@style/TextAppearance.AppCompat.Subhead"
                     app:edittextfont="Raleway-Regular.ttf" />
 
             </LinearLayout>
@@ -61,19 +61,19 @@
                 android:orientation="vertical">
 
                 <com.yberry.dinehawaii.customview.CustomTextView
+                    style="@style/TextAppearance.AppCompat.Subhead"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Date"
                     android:textStyle="bold"
-                    style="@style/TextAppearance.AppCompat.Subhead"
                     app:edittextfont="Raleway-Bold.ttf" />
 
                 <com.yberry.dinehawaii.customview.CustomTextView
                     android:id="@+id/date"
+                    style="@style/TextAppearance.AppCompat.Subhead"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="NA"
-                    style="@style/TextAppearance.AppCompat.Subhead"
                     app:edittextfont="Raleway-Regular.ttf" />
             </LinearLayout>
 
@@ -118,7 +118,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/_5sdp"
             android:orientation="vertical"
-            android:visibility="gone">
+            android:visibility="visible">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -220,10 +220,24 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/_5sdp"
                 android:orientation="horizontal"
-                android:weightSum="2">
+                android:weightSum="3">
+
+                <com.yberry.dinehawaii.customview.CustomButton
+                    android:id="@+id/btnRating"
+                    style="@style/TextAppearance.AppCompat.Small"
+                    android:layout_width="0dp"
+                    android:layout_height="@dimen/_25sdp"
+                    android:layout_weight="1"
+                    android:background="@drawable/planborder"
+                    android:text="Rating"
+                    android:layout_marginRight="3dp"
+                    android:textAllCaps="false"
+                    android:textColor="@color/green"
+                    app:edittextfont="Raleway-Regular.ttf" />
 
                 <com.yberry.dinehawaii.customview.CustomButton
                     android:id="@+id/repeatOrder"
+                    android:layout_marginRight="3dp"
                     style="@style/TextAppearance.AppCompat.Small"
                     android:layout_width="0dp"
                     android:layout_height="@dimen/_25sdp"
@@ -239,10 +253,9 @@
                     style="@style/TextAppearance.AppCompat.Small"
                     android:layout_width="0dp"
                     android:layout_height="@dimen/_25sdp"
-                    android:layout_marginLeft="@dimen/_5sdp"
                     android:layout_weight="1"
                     android:background="@drawable/planborder"
-                    android:text="View Order"
+                    android:text="View Details"
                     android:textAllCaps="false"
                     android:textColor="@color/green"
                     app:edittextfont="Raleway-Regular.ttf" />
