--- a/app/src/main/res/layout/myreview_adapter.xml
+++ b/app/src/main/res/layout/myreview_adapter.xml
@@ -1,90 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_my_reviews"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
     android:background="@color/activityBackground"
+    android:orientation="vertical"
     tools:context="com.yberry.dinehawaii.Customer.Fragment.MyReviews">
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:padding="@dimen/_10sdp"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:visibility="gone"
-        android:id="@+id/linearSortBy"
-        android:orientation="horizontal">
-        <com.yberry.dinehawaii.customview.CustomTextView
-            android:layout_width="0dp"
-            android:layout_weight="0.6"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/_5sdp"
-            app:edittextfont="Raleway-Regular.ttf"
-            android:textColor="@color/black"
-            android:text="SORT BY" />
 
-        <com.yberry.dinehawaii.customview.CustomCheckBox
-            android:layout_width="0dp"
-            android:layout_weight="0.6"
-            app:edittextfont="Raleway-Regular.ttf"
-            android:layout_height="wrap_content"
-            android:text="Date"
-            android:textColor="@color/gray" />
 
-        <com.yberry.dinehawaii.customview.CustomCheckBox
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:layout_height="match_parent"
-            app:edittextfont="Raleway-Regular.ttf"
-            android:layout_gravity="center"
-            android:text="Business Name"
-            android:textColor="@color/gray" />
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="@dimen/_10sdp"
-        android:orientation="horizontal"
-        android:visibility="gone"
-        android:weightSum="2">
-        <com.yberry.dinehawaii.customview.CustomTextView
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            app:edittextfont="Raleway-Regular.ttf"
-            android:gravity="center"
-            android:layout_height="wrap_content"
-            android:text="Reviews - Summary"/>
-        <com.yberry.dinehawaii.customview.CustomTextView
-            android:layout_width="0dp"
-            app:edittextfont="Raleway-Regular.ttf"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:layout_height="wrap_content"
-            android:text="Reviews - Replies"/>
-    </LinearLayout>
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="@dimen/_2sdp"
         android:layout_marginLeft="@dimen/_5sdp"
         android:layout_marginRight="@dimen/_5sdp"
         android:layout_marginTop="@dimen/_5sdp"
-        android:layout_marginBottom="@dimen/_2sdp"
-        android:elevation="@dimen/_2sdp"
-        app:cardElevation="@dimen/_2sdp"
-        app:cardCornerRadius="@dimen/_4sdp">
+        android:elevation="1dp"
+        app:cardCornerRadius="2dp"
+        app:cardElevation="1dp"
+        app:contentPadding="@dimen/_5sdp">
+
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="vertical">
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:weightSum="3"
-                android:layout_marginTop="@dimen/_5sdp"
-                android:layout_marginLeft="@dimen/_5sdp"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:weightSum="2">
+
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -92,157 +40,91 @@
                     android:orientation="vertical">
 
                     <com.yberry.dinehawaii.customview.CustomTextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="Date"
+                        android:id="@+id/tvBusiName"
                         style="@style/TextAppearance.AppCompat.Subhead"
-                        app:edittextfont="Raleway-Bold.ttf" />
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="NA"
+                        app:edittextfont="Raleway-Regular.ttf" />
+
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:orientation="vertical">
 
                     <com.yberry.dinehawaii.customview.CustomTextView
                         android:id="@+id/tvDate"
-                        android:layout_width="wrap_content"
-                        android:layout_marginTop="@dimen/_5sdp"
-                        style="@style/TextAppearance.AppCompat.Small"
-                        android:layout_height="wrap_content"
-                        app:edittextfont="Raleway-Regular.ttf"
-                        android:text="NA" />
-
-                </LinearLayout>
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:gravity="center"
-                    android:orientation="vertical">
-
-                    <com.yberry.dinehawaii.customview.CustomTextView
-                        android:id="@+id/textView7"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:gravity="center"
                         style="@style/TextAppearance.AppCompat.Subhead"
-                        android:text="Business"
-                        app:edittextfont="Raleway-Bold.ttf"  />
-
-                    <com.yberry.dinehawaii.customview.CustomTextView
-                        android:id="@+id/businessName"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:gravity="center"
-                        android:layout_marginTop="@dimen/_5sdp"
-                        style="@style/TextAppearance.AppCompat.Small"
-                        app:edittextfont="Raleway-Regular.ttf"
-                        android:text="NA" />
-
-
-                </LinearLayout>
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:gravity="center"
-                    android:orientation="vertical">
-
-                    <com.yberry.dinehawaii.customview.CustomTextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        style="@style/TextAppearance.AppCompat.Subhead"
-                        android:text="Overall Rating"
-                        app:edittextfont="Raleway-Bold.ttf" />
-
-                    <com.yberry.dinehawaii.customview.CustomTextView
-                        android:id="@+id/overallRatting"
-                        android:layout_width="match_parent"
-                        style="@style/TextAppearance.AppCompat.Small"
-                        android:gravity="center"
-                        android:layout_marginTop="@dimen/_5sdp"
-                        app:edittextfont="Raleway-Regular.ttf"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="left"
+                        android:layout_gravity="end"
+                        android:gravity="end"
                         android:text="NA"
-
-                        />
+                        app:edittextfont="Raleway-Regular.ttf" />
 
                 </LinearLayout>
+
+
             </LinearLayout>
 
-            <com.yberry.dinehawaii.customview.CustomTextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Details"
-                style="@style/TextAppearance.AppCompat.Subhead"
-                app:edittextfont="Raleway-Bold.ttf"
-                android:layout_marginTop="@dimen/_10sdp"
-                android:layout_marginLeft="@dimen/_5sdp"
-                />
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_marginLeft="@dimen/_5sdp"
-                android:layout_height="@dimen/_40sdp"
-                android:layout_gravity="center_vertical"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/_5sdp"
                 android:orientation="horizontal">
 
                 <com.yberry.dinehawaii.customview.CustomTextView
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_gravity="center"
                     style="@style/TextAppearance.AppCompat.Subhead"
-                    android:layout_weight="0.4"
-                    app:edittextfont="Raleway-Regular.ttf"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
                     android:gravity="center_vertical"
-                    android:text="Rating"
-                    />
+                    android:text="Rating : "
+                    app:edittextfont="Raleway-Regular.ttf" />
 
                 <RatingBar
-                    android:id="@+id/rattingbar"
+                    android:id="@+id/ratingBar"
+                    style="@style/Widget.AppCompat.RatingBar.Small"
                     android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_marginRight="@dimen/_10sdp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="@dimen/_5sdp"
                     android:isIndicator="true"
                     android:numStars="5"
-                    android:scaleX="0.5"
-                    android:scaleY="0.5"
+                    android:rating="1"
                     android:stepSize="1" />
 
             </LinearLayout>
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/_1sdp"
-                android:layout_marginLeft="@dimen/_5sdp"
-                android:visibility="gone"
-                android:layout_marginRight="@dimen/_5sdp"
-                android:background="@color/lightgray"></View>
+
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/_40sdp"
-                android:visibility="gone"
-                android:layout_marginLeft="@dimen/_5sdp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/_5sdp"
                 android:orientation="horizontal">
 
                 <com.yberry.dinehawaii.customview.CustomTextView
-                    android:id="@+id/textView13"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
+                    style="@style/TextAppearance.AppCompat.Subhead"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:layout_weight="0.4"
-                    app:edittextfont="Raleway-Regular.ttf"
                     android:gravity="center_vertical"
-                    android:text="Test"
-                    />
+                    android:text="Review : "
+                    app:edittextfont="Raleway-Regular.ttf" />
 
                 <com.yberry.dinehawaii.customview.CustomTextView
-                    android:id="@+id/etQues1"
-                    android:layout_width="0dp"
-                    android:layout_weight="0.9"
-                   
-                    android:layout_height="match_parent"
-                    app:edittextfont="Raleway-Regular.ttf"
-                    android:text="test review"
-                    android:gravity="center" />
+                    android:id="@+id/tvReview"
+                    style="@style/TextAppearance.AppCompat.Subhead"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginLeft="@dimen/_5sdp"
+                    android:gravity="center_vertical"
+                    android:text="NA"
+                    app:edittextfont="Raleway-Regular.ttf" />
             </LinearLayout>
         </LinearLayout>
-
-
     </android.support.v7.widget.CardView>
 </LinearLayout>
