--- a/app/src/main/res/layout/activity_order_detail_activty.xml
+++ b/app/src/main/res/layout/activity_order_detail_activty.xml
@@ -731,7 +731,7 @@
                             <RelativeLayout
                                 android:layout_width="0dp"
                                 android:layout_height="wrap_content"
-                                android:layout_weight="0.4">
+                                android:layout_weight="0.7">
 
                                 <com.yberry.dinehawaii.customview.CustomTextView
                                     android:id="@+id/tvItemName"
@@ -743,20 +743,6 @@
                                     app:edittextfont="@string/raleway_regular" />
                             </RelativeLayout>
 
-                            <RelativeLayout
-                                android:layout_width="0dp"
-                                android:layout_height="wrap_content"
-                                android:layout_weight="0.4">
-
-                                <com.yberry.dinehawaii.customview.CustomTextView
-                                    android:id="@+id/tvCustomization"
-                                    style="@style/TextAppearance.AppCompat.Subhead"
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:singleLine="true"
-                                    android:text="Customization"
-                                    app:edittextfont="@string/raleway_regular" />
-                            </RelativeLayout>
 
                             <RelativeLayout
                                 android:layout_width="0dp"
@@ -768,13 +754,26 @@
                                     style="@style/TextAppearance.AppCompat.Subhead"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
-                                    android:layout_alignParentEnd="true"
-                                    android:layout_alignParentRight="true"
+                                    android:layout_centerHorizontal="true"
                                     android:singleLine="true"
                                     android:text="Price"
                                     app:edittextfont="@string/raleway_regular" />
                             </RelativeLayout>
 
+                            <RelativeLayout
+                                android:layout_width="0dp"
+                                android:layout_height="wrap_content"
+                                android:layout_weight="0.2">
+
+                                <com.yberry.dinehawaii.customview.CustomTextView
+                                    android:id="@+id/tvCustomization"
+                                    style="@style/TextAppearance.AppCompat.Subhead"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:singleLine="true"
+                                    android:text=""
+                                    app:edittextfont="@string/raleway_regular" />
+                            </RelativeLayout>
                         </LinearLayout>
 
                         <View
@@ -1114,6 +1113,7 @@
                                 android:layout_width="0dp"
                                 android:layout_height="wrap_content"
                                 android:layout_weight="0.6">
+
                                 <com.yberry.dinehawaii.customview.CustomTextView
                                     android:id="@+id/tvContactNo"
                                     style="@style/TextAppearance.AppCompat.Subhead"
