--- a/app/src/main/res/layout/order_detail_item_layout.xml
+++ b/app/src/main/res/layout/order_detail_item_layout.xml
@@ -1,51 +1,69 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:weightSum="1"
-    android:layout_marginTop="@dimen/_5sdp"
+    android:layout_marginLeft="@dimen/_5sdp"
     android:layout_marginRight="@dimen/_5sdp"
-    android:layout_marginLeft="@dimen/_5sdp">
+    android:layout_marginTop="@dimen/_5sdp"
+    android:orientation="horizontal"
+    android:weightSum="1">
 
     <RelativeLayout
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_weight="0.4">
+        android:layout_weight="0.7">
+
         <com.yberry.dinehawaii.customview.CustomTextView
             android:id="@+id/tvItemName"
+            style="@style/TextAppearance.AppCompat.Small"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:lineSpacingExtra="2dp"
             android:text="NA"
-            style="@style/TextAppearance.AppCompat.Subhead"
-            app:edittextfont="Raleway-Regular.ttf"/>
-    </RelativeLayout>
-    <RelativeLayout
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="0.4">
+            app:edittextfont="Raleway-Regular.ttf" />
+
         <com.yberry.dinehawaii.customview.CustomTextView
             android:id="@+id/tvCustomization"
+            style="@style/TextAppearance.AppCompat.Notification.Time"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="NA"
-            style="@style/TextAppearance.AppCompat.Subhead"
-            app:edittextfont="Raleway-Regular.ttf"/>
+            android:layout_below="@id/tvItemName"
+            android:text=""
+            app:edittextfont="Raleway-Regular.ttf" />
     </RelativeLayout>
+
+
     <RelativeLayout
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="0.2">
+
         <com.yberry.dinehawaii.customview.CustomTextView
             android:id="@+id/tvPrice"
+            style="@style/TextAppearance.AppCompat.Small"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
             android:text="2"
+            app:edittextfont="Raleway-Regular.ttf" />
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="0.1">
+
+        <ImageView
+            android:id="@+id/imageStatus"
             style="@style/TextAppearance.AppCompat.Subhead"
-            app:edittextfont="Raleway-Regular.ttf"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:layout_alignParentEnd="true"
             android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true"/>
+            android:src="@drawable/fab_pending"
+            android:text=""
+            android:tint="@color/colorPrimary" />
     </RelativeLayout>
 
 </LinearLayout>
