--- a/app/src/main/res/layout/activity_busi_select_package.xml
+++ b/app/src/main/res/layout/activity_busi_select_package.xml
@@ -144,6 +144,24 @@
                 android:layout_marginTop="3dp"
                 android:background="#9aababab"></View>
 
+            <com.yberry.dinehawaii.customview.CustomTextView
+                android:id="@+id/tvDisclaimer"
+                style="@style/TextAppearance.AppCompat.Subhead"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:padding="@dimen/_10sdp"
+                android:text="@string/disclaimer_text"
+                android:textColor="@color/edit_text_color"
+                app:edittextfont="Raleway-Bold.ttf" />
+
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1px"
+                android:layout_marginTop="3dp"
+                android:background="#9aababab"></View>
+
         </LinearLayout>
     </ScrollView>
 </RelativeLayout>
